Esqueleto do projeto

--- a/index.html
+++ b/index.html
@@ -10,10 +10,40 @@
     <link href="https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat&family=Numans&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./styles.css" />
+    <link rel="icon" href="img/Favcon 48px.svg">
 </head>
 
 <body>
+    <main>
+        <img src="img/bag.png" alt="Sacola de compras">
+        <form>
+            <input type="text" placeholder="Digite o item que deseja adicionar">
+            <button>Salvar item</button>
+        </form>
+        
+        <h2>Lista de compras</h2>
+        <hr>
 
+        <ul>
+            <li>
+                <div>
+                    <div>
+                        <input type="checkbox">
+                        <p>Ração de gato</p>
+                    </div>
+                    <div>
+                        <button>
+                            <img src="img/delete.svg" alt="Deletar">
+                        </button>
+                        <button>
+                            <img src="img/edit.svg" alt="Editar">
+                        </button>
+                    </div>
+                </div>
+                <p>Segunda-feira (31/01/2022) às 08:30</p>
+            </li>
+        </ul>
+    </main>
 </body>
 
 </html>
