--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <main>
         <img src="img/bag.png" alt="Sacola de compras">
         <form>
-            <input type="text" placeholder="Digite o item que deseja adicionar">
-            <button>Salvar item</button>
+            <input class="input-item" type="text" placeholder="Digite o item que deseja adicionar">
+            <button class="adicionar-botao">Salvar item</button>
         </form>
         
         
@@ -27,8 +27,8 @@
             <h2>Lista de compras</h2>
             <hr />
             <li>
-                <div>
-                    <div>
+                <div class="item-lista-container">
+                    <div class="container-nome-compra">
                         <input type="checkbox">
                         <p>Ração de gato</p>
                     </div>
@@ -41,7 +41,7 @@
                         </button>
                     </div>
                 </div>
-                <p>Segunda-feira (31/01/2022) às 08:30</p>
+                <p class="item-lista-texto">Segunda-feira (31/01/2022) às 08:30</p>
             </li>
         </ul>
     </main>
