Criando elementos da lista dinamicamente

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <main>
         <img src="img/bag.png" alt="Sacola de compras">
         <form>
-            <input class="input-item" type="text" placeholder="Digite o item que deseja adicionar">
-            <button class="adicionar-botao">Salvar item</button>
+            <input class="input-item" id="input-item" type="text" placeholder="Digite o item que deseja adicionar">
+            <button class="adicionar-botao" id="adicionar-item">Salvar item</button>
         </form>
         
         
 
-        <ul>
+        <ul id="lista-de-compras">
             <h2>Lista de compras</h2>
             <hr />
             <li>
@@ -50,6 +50,7 @@
             </li>
         </ul>
     </main>
+    <script src="scripts.js"></script>
 </body>
 
 </html>
