--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
                 <p class="item-lista-texto">Segunda-feira (31/01/2022) às 08:30</p>
             </li>
         </ul>
+
+        <h2>Comprado</h2>
+        <hr />
+        <ul id="lista-comprados">
+            
+        </ul>
     </main>
     <script src="scripts.js"></script>
 </body>
