--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             
         </ul>
     </main>
-    <script src="scripts.js"></script>
+    <script src="scripts.js" type="module"></script>
 </body>
 
 </html>
