--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <p id="mensagem-lista-vazia" style="display: block">Sua lista está vazia. Adicione itens a ela para não esquecer nada na próxima compra!</p>
         </ul>
 
-        <h2>Comprado</h2>
-        <hr />
+        <h2 class="comprados-titulo">Comprado</h2>
+        <hr class="comprados-hr" />
         <ul id="lista-comprados">
             
         </ul>
